--- a/assets/css/_mobile.scss
+++ b/assets/css/_mobile.scss
@@ -79,13 +79,13 @@
     margin-top: 1rem;
     div {
       max-width: auto;
-      // &.small {
-      //   font-size: 1.2rem;
-      //   padding: 0.5rem;
-      //   &:hover {
-      //     padding: 0.4rem;
-      //   }
-      // }
+      &.small {
+        font-size: 1.2rem;
+        padding: 0.5rem;
+        &:hover {
+          padding: 0.4rem;
+        }
+      }
     }
   }
 }
