--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,7 +32,7 @@ h3 {
     font-size: 5rem;
     font-weight: 900;
     &.modak-font {
-      // font-family: "Modak", cursive;
+      font-family: "Modak", cursive;
       font-weight: 400;
     }
   }
@@ -198,49 +198,54 @@ main {
     background: #2a2a2a;
     padding: 20px;
     border-radius: 12px;
-    border-top: 8px solid $secondary-color;
-    border-bottom: 8px solid $secondary-color;
+    // border-top: 8px solid $secondary-color;
+    // border-bottom: 8px solid $secondary-color;
     display: grid;
-    gap: 4px;
-    a {
-      border-radius: 12px;
-      text-align: center;
-    }
-  }
-  .item-desc-wrapper {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    border-radius: 12px;
-    margin-bottom: 6px;
-    img {
-      border-radius: 12px;
+    gap: 8px;
+
+    .project-image {
+      position: relative;
+      .project-icon {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        // z-index: 10;
+        background: $secondary-color;
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        padding: 10px;
+        .v-icon {
+          font-size: 50px;
+          color: #fff;
+        }
+      }
+      img {
+        border-radius: 12px;
+        width: 100%;
+        min-height: 200px;
+        max-height: 200px;
+        object-fit: cover;
+        display: block;
+        position: relative;
+        &:hover {
+          opacity: 0.5;
+          @include easeOut;
+        }
+      }
     }
 
-    .desc {
-      position: absolute;
-      padding: 20px;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      display: grid;
-      place-content: center;
-      background: rgba(0, 0, 0, 0.9);
+    a {
+      height: 50px;
       border-radius: 12px;
+      text-align: center;
+      font-weight: bold;
+      background: $secondary-color;
+      color: #fff;
     }
-  }
-  img {
-    width: 100%;
-    min-height: 200px;
-    max-height: 200px;
-    object-fit: cover;
-    display: block;
-    position: relative;
-    &:hover {
-      opacity: 0.5;
-      @include easeOut;
+    .project-link {
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 }
