--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Modak&family=Patrick+Hand&family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Roboto+Condensed:wght@300;400;700&display=swap");
 
 @import "config";
 @import "menu";
@@ -15,8 +15,8 @@ body {
   color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
-  // font-family: "Patrick Hand", cursive;
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
+  // font-family: "Poppins", sans-serif;
   line-height: 1.5;
   letter-spacing: 1.5px;
 }
@@ -32,7 +32,7 @@ h3 {
     font-size: 5rem;
     font-weight: 900;
     &.modak-font {
-      font-family: "Modak", cursive;
+      font-family: "Bubblegum Sans", cursive;
       font-weight: 400;
     }
   }
@@ -190,6 +190,7 @@ main {
 }
 
 // Work/Projects
+
 .projects {
   display: grid;
   grid-gap: 0.7rem;
@@ -313,6 +314,7 @@ main {
   text-align: center;
   padding: 1rem;
   background: darken($primary-color, 1);
+  // background: #59b984;
   color: #ddd;
   font-size: 14px;
   height: 80px;
