--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,8 +15,8 @@ body {
   color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
-  font-family: "Roboto Condensed", sans-serif;
-  // font-family: "Poppins", sans-serif;
+  // font-family: "Roboto Condensed", sans-serif;
+  font-family: "Bubblegum Sans", cursive;
   line-height: 1.5;
   letter-spacing: 1.5px;
 }
@@ -199,11 +199,12 @@ main {
     background: #2a2a2a;
     padding: 20px;
     border-radius: 12px;
-    // border-top: 8px solid $secondary-color;
-    // border-bottom: 8px solid $secondary-color;
+
     display: grid;
     gap: 8px;
-
+    .desc {
+      font-size: 18px;
+    }
     .project-image {
       position: relative;
       .project-icon {
