--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,8 +15,8 @@ body {
   color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
-  // font-family: "Roboto Condensed", sans-serif;
-  font-family: "Bubblegum Sans", cursive;
+  font-family: "Roboto Condensed", sans-serif;
+  // font-family: "Bubblegum Sans", cursive;
   line-height: 1.5;
   letter-spacing: 1.5px;
 }
@@ -33,6 +33,7 @@ h3 {
     font-weight: 900;
     &.modak-font {
       font-family: "Bubblegum Sans", cursive;
+      // font-family: "Roboto Condensed", sans-serif;
       font-weight: 400;
     }
   }
@@ -243,6 +244,13 @@ main {
       font-weight: bold;
       background: $secondary-color;
       color: #fff;
+      &:hover {
+        background: darken($secondary-color, 5);
+      }
+      &:active {
+        background: darken($secondary-color, 12);
+        transform: scale(0.98);
+      }
     }
     .project-link {
       display: flex;
