--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,10 +15,25 @@ body {
   color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Roboto", sans-serif;
   // font-family: "Bubblegum Sans", cursive;
   line-height: 1.5;
   letter-spacing: 1.5px;
+}
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-track {
+  background: #fff;
+  border-radius: 100vw;
+  margin-block: 10px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(45deg, #00ff73, #59b984);
+  max-height: 5px !important;
+  border-radius: 100vw;
+  border: 2px solid #fff;
 }
 
 // Headings
