--- a/assets/css/_menu.scss
+++ b/assets/css/_menu.scss
@@ -117,13 +117,13 @@
     display: inline-block;
     position: relative;
     font-size: 30px;
-    text-transform: uppercase;
-    padding: 1rem 0;
+    // text-transform: uppercase;
+    padding: 0.5rem 0;
     font-weight: 500;
     color: set-text-color($primary-color);
     text-decoration: none;
     @include easeOut;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
 
     &:hover {
       color: $secondary-color;
