--- a/assets/css/_mobile.scss
+++ b/assets/css/_mobile.scss
@@ -37,21 +37,22 @@
   }
 
   .menu-nav {
-    height: 75vh;
+    height: 70vh;
     transform: translate3d(-100%, 0, 0);
     font-size: 24px;
   }
 
   .menu-branding {
-    height: 25vh;
+    height: 30vh;
     transform: translate3d(100%, 0, 0);
     background: #0e0e0e;
 
     .portrait {
       margin-top: 80px;
       background: url("@/assets/img/code.png");
-      height: 120px;
-      width: 105px;
+      height: 180px;
+      width: 180px;
+      border-radius: 50%;
       background-size: cover;
     }
   }
