--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -57,7 +57,7 @@ h3 {
     margin-bottom: 2rem;
     padding: 1rem;
     background: #2a2a2a;
-    border-radius: 8px;
+    // border-radius: 8px;
   }
 }
 
@@ -83,11 +83,41 @@ main {
   h2.scnd {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
+    @media (max-width: 900px) {
+      flex-direction: column;
+      gap: 2rem;
+      padding: 2rem;
+      border-radius: 8px;
+      text-align: left;
+      align-items: start;
+    }
+    @media (max-width: 768px) {
+      flex-direction: column;
+      gap: 2rem;
+      padding: 2rem;
+      border-radius: 8px;
+      text-align: center;
+      align-items: center;
+    }
 
     span {
-      font-size: 40px;
-      margin-right: 10px;
+      font-size: 30px;
+    }
+    button {
+      background: linear-gradient(to right, #2c744c, $secondary-color);
+      border-radius: 100px;
+      padding: 0.5rem 2rem;
+      color: #ddd;
+      box-shadow: 15px 10px 20px rgba(0, 0, 0, 0.2);
+      transition: 0.2s;
+      @media (max-width: 500px) {
+        padding: 0.5rem 1.2rem;
+        font-size: 1rem;
+      }
+      &:hover {
+        background: linear-gradient(to right, $secondary-color, #2c744c);
+      }
     }
   }
 
