--- a/assets/css/_mobile.scss
+++ b/assets/css/_mobile.scss
@@ -37,13 +37,15 @@
   }
 
   .menu-nav {
-    height: 70vh;
+    // * made mobile navigation full height
+    height: 100vh;
     transform: translate3d(-100%, 0, 0);
     font-size: 24px;
   }
 
   .menu-branding {
-    height: 30vh;
+    // * hided mobile menu image by reducing its height to 0
+    height: 0vh;
     transform: translate3d(100%, 0, 0);
     background: #0e0e0e;
 
