--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -245,7 +245,7 @@ main {
     background: #2a2a2a;
     padding: 10px;
     border-radius: 8px;
-
+    transition: all 1s linear;
     display: grid;
     gap: 8px;
     .desc {
