--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,12 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap");
 
 @import "config";
 @import "menu";
 html {
+  scroll-behavior: smooth;
 }
 * {
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 body {
@@ -17,14 +18,14 @@ body {
   height: 100%;
   margin: 0;
   // font-family: "Bubblegum Sans", cursive;
-  line-height: 1.5;
-  letter-spacing: 1.5px;
+  line-height: 1.4;
+  letter-spacing: 0.1em;
 }
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 8px;
 }
 ::-webkit-scrollbar-track {
-  background: #fff;
+  background: #252525;
   border-radius: 100vw;
   margin-block: 10px;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
@@ -33,7 +34,7 @@ body {
   background: linear-gradient(45deg, #00ff73, #59b984);
   max-height: 5px !important;
   border-radius: 100vw;
-  border: 2px solid #fff;
+  // border: 2px solid #fff;
 }
 
 // Headings
@@ -46,6 +47,7 @@ h3 {
   &.lg-heading {
     font-size: 5rem;
     font-weight: 900;
+    font-family: "Josefin Sans", sans-serif;
     &.modak-font {
       // font-family: "Bubblegum Sans", cursive;
       // font-family: "Roboto Condensed", sans-serif;
@@ -62,7 +64,7 @@ h3 {
 }
 
 a {
-  color: #fff;
+  color: #cdcdcd;
   text-decoration: none;
 }
 
@@ -248,6 +250,7 @@ main {
     transition: all 1s linear;
     display: grid;
     gap: 8px;
+    transition: all 0.5s ease-in-out;
     .desc {
       font-size: 18px;
     }
@@ -265,7 +268,7 @@ main {
         padding: 10px;
         .v-icon {
           font-size: 50px;
-          color: #fff;
+          color: #cdcdcd;
         }
       }
       img {
@@ -308,7 +311,7 @@ main {
       text-align: center;
       font-weight: bold;
       background: $secondary-color;
-      color: #fff;
+      color: #cdcdcd;
       &:hover {
         background: darken($secondary-color, 5);
       }
@@ -372,7 +375,7 @@ main {
 .btn-dark {
   @extend .btn;
   background: darken($primary-color, 50);
-  color: #fff;
+  color: #cdcdcd;
 }
 
 .btn-light {
