--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -270,7 +270,7 @@ main {
         padding: 10px;
         .v-icon {
           font-size: 50px;
-          color: #b1b2b3;
+          color: #eee;
         }
       }
       img {
