--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -243,7 +243,7 @@ main {
 
 .projects {
   display: grid;
-  grid-gap: 0.7rem;
+  grid-gap: 1.2rem;
   grid-template-columns: repeat(3, 1fr);
   .item {
     background: #2a2a2a;
@@ -276,8 +276,8 @@ main {
       img {
         border-radius: 8px;
         width: 100%;
-        min-height: 180px;
-        max-height: 180px;
+        min-height: 150px;
+        max-height: 150px;
         object-fit: cover;
         display: block;
         position: relative;
@@ -313,7 +313,7 @@ main {
       text-align: center;
       font-weight: bold;
       background: $secondary-color;
-      color: #b1b2b3;
+      color: #eee;
       &:hover {
         background: darken($secondary-color, 5);
       }
