--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,7 +18,7 @@ body,
   @include background;
   background: $primary-color !important;
   // color: set-text-color($primary-color);
-  color: #eee !important;
+  color: #b1b2b3 !important;
   height: 100%;
   margin: 0;
   line-height: 1.5;
