--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -24,6 +24,7 @@ body,
   line-height: 1.5;
   letter-spacing: 0.03em;
   word-spacing: 0.1em;
+  position: relative;
 }
 ::-webkit-scrollbar {
   width: 8px;
@@ -188,7 +189,7 @@ main {
       font-weight: 400 !important;
       font-size: 1.4rem;
       text-align: left;
-      background: rgba(42, 42, 42, 0.5);
+      background: #2a2a2a;
       color: #b1b2b3;
       padding: 20px 16px 20px 20px;
       border-left: 10px solid $secondary-color;
