--- a/assets/css/_mobile.scss
+++ b/assets/css/_mobile.scss
@@ -51,7 +51,7 @@
 
     .portrait {
       margin-top: 80px;
-      background: url("@/assets/img/code.png");
+      background: url("@/assets/img/logo.png");
       height: 180px;
       width: 180px;
       border-radius: 50%;
@@ -105,6 +105,14 @@
     .lg-heading {
       margin-top: 1rem;
       font-size: 2.2rem;
+      gap: 0.5rem;
+      justify-content: center;
+      img {
+        width: 140px;
+        height: 80px;
+        object-fit: contain;
+        margin-top: -10px;
+      }
     }
   }
 
