--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -53,6 +53,14 @@ h3 {
     font-size: 5rem;
     font-weight: 900;
     font-family: "Josefin Sans", sans-serif;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    img {
+      width: 220px;
+      height: 120px;
+      object-fit: contain;
+    }
   }
 
   &.sm-heading {
@@ -166,13 +174,13 @@ main {
     margin: auto;
     width: 100%;
     height: 100%;
-    object-fit: cover;
     background: #2a2a2a;
     border-radius: 12px;
+    filter: blur(80);
 
     img {
       width: 100%;
-      object-fit: cover;
+      object-fit: contain;
     }
   }
 
