added background video

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,6 +17,7 @@ body,
   // font-size: 20px;
   @include background;
   background: $primary-color !important;
+  background: #161630 !important;
   // color: set-text-color($primary-color);
   color: #b1b2b3 !important;
   height: 100%;
