--- a/assets/css/_mobile.scss
+++ b/assets/css/_mobile.scss
@@ -20,8 +20,12 @@
 
     h1.lg-heading {
       line-height: 1;
-      margin-bottom: 1rem;
-      font-size: 2.2rem;
+      margin-bottom: 2rem;
+      font-size: 2rem;
+      gap: 0;
+      &.home-title {
+        margin-bottom: 2rem;
+      }
     }
   }
 
@@ -104,14 +108,15 @@
 
     .lg-heading {
       margin-top: 1rem;
-      font-size: 2.2rem;
-      gap: 0.5rem;
+      font-size: 1.7rem;
+      gap: 0;
       justify-content: center;
+      justify-content: start;
       img {
         width: 140px;
         height: 80px;
         object-fit: contain;
-        margin-top: -10px;
+        // margin-top: -10px;
       }
     }
   }
