--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -57,17 +57,25 @@ h3 {
     display: flex;
     align-items: center;
     gap: 1rem;
+    margin-bottom: 3rem;
+    margin-left: -12px;
+    &.home-title {
+      margin-bottom: 1rem;
+    }
     img {
-      width: 220px;
-      height: 120px;
+      width: 280px;
+      height: 100px;
       object-fit: contain;
     }
   }
-
+  .tag {
+    color: #ff70c1;
+  }
   &.sm-heading {
     margin-bottom: 2rem;
     padding: 1rem;
-    background: #2a2a2a;
+    background: #061126;
+    border-radius: 8px;
   }
 }
 
@@ -144,7 +152,7 @@ main {
       padding: 0.4rem;
       font-size: 50px !important;
       border-radius: 8px;
-      background: #2a2a2a;
+      background: #061126;
       @include easeOut;
 
       &:hover {
@@ -175,7 +183,7 @@ main {
     margin: auto;
     width: 100%;
     height: 100%;
-    background: #2a2a2a;
+    background: #061126;
     border-radius: 12px;
     filter: blur(80);
 
@@ -198,18 +206,18 @@ main {
       font-weight: 400 !important;
       font-size: 1.4rem;
       text-align: left;
-      background: #2a2a2a;
+      background: #061126;
       color: #b1b2b3;
       padding: 20px 16px 20px 20px;
       border-left: 10px solid $secondary-color;
       letter-spacing: 1px;
 
       @media (max-width: 600px) {
-        padding: 0 1rem;
+        // padding: 0 1rem;
         font-size: 1rem;
         border-radius: 12px;
         border: none;
-        background: none;
+        // background: none;
         // text-align: center;
       }
     }
@@ -231,7 +239,8 @@ main {
   }
 
   .job {
-    background: lighten($primary-color, 5);
+    // background: lighten($primary-color, 5);
+    background: #061126;
     padding: 1rem;
     // border-bottom: $secondary-color 10px solid;
     display: grid;
@@ -259,7 +268,7 @@ main {
   grid-gap: 1.2rem;
   grid-template-columns: repeat(3, 1fr);
   .item {
-    background: #2a2a2a;
+    background: #061126;
     padding: 10px;
     border-radius: 8px;
     transition: all 1s linear;
@@ -414,7 +423,8 @@ main {
   justify-content: center;
   text-align: center;
   padding: 1rem;
-  background: darken($primary-color, 1);
+  // background: darken($primary-color, 1);
+  background: #061126;
   // background: #59b984;
   color: #ddd;
   font-size: 14px;
