--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -58,7 +58,7 @@ h3 {
     align-items: center;
     gap: 1rem;
     margin-bottom: 3rem;
-    margin-left: -12px;
+    // margin-left: -12px;
     &.home-title {
       margin-bottom: 1rem;
     }
