--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap");
 
 @import "config";
 @import "menu";
@@ -9,7 +11,7 @@ html {
 }
 * {
   box-sizing: border-box;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Fira Mono", monospace;
 }
 
 body,
@@ -49,16 +51,22 @@ h2,
 h3 {
   margin: 0;
   font-weight: 400;
+  font-family: "Josefin Sans", sans-serif;
+  font-family: "Monofett", monospace;
+  font-family: "Tilt Prism", cursive;
 
   &.lg-heading {
+    font-family: "Tilt Prism", cursive;
     font-size: 5rem;
-    font-weight: 900;
-    font-family: "Josefin Sans", sans-serif;
+    font-weight: 700;
     display: flex;
     align-items: center;
     gap: 1rem;
     margin-bottom: 3rem;
-    // margin-left: -12px;
+    * {
+      font-family: "Tilt Prism", cursive;
+    }
+
     &.home-title {
       margin-bottom: 1rem;
     }
@@ -103,6 +111,8 @@ main {
   padding: 4rem;
   height: 100%;
   min-height: calc(100vh - 80px);
+  max-width: 1280px;
+  margin-inline: auto;
   h2.scnd {
     display: flex;
     align-items: center;
@@ -262,6 +272,36 @@ main {
       font-size: 180px;
       z-index: -1;
       opacity: 0.2;
+    }
+    .git-calendar {
+      margin-bottom: 6rem;
+      width: 100%;
+      transform: scaleY(1.6);
+      @media (max-width: 600px) {
+        transform: scaleY(1.8);
+        margin-bottom: 2rem;
+      }
+    }
+    h3 {
+      text-align: left !important;
+      color: #59b984;
+      &.activities {
+        font-size: 2.5rem;
+        margin-bottom: 4rem;
+        margin-top: 0.5rem;
+        @media (max-width: 600px) {
+          margin-bottom: 1.2rem;
+          font-size: 1.8rem !important;
+        }
+      }
+
+      &.intro {
+        font-size: 2rem;
+        margin-bottom: 0.4rem;
+        @media (max-width: 600px) {
+          font-size: 1.4rem !important;
+        }
+      }
     }
     p {
       font-weight: 400 !important;
